{
    "name": "Controls",
    "maps": [
        {
            "name": "WorldView",
            "id": "64292090-6d7d-49df-9e91-2e0c79900b0b",
            "actions": [
                {
                    "name": "MoveUp",
                    "type": "Button",
                    "id": "1c2ae8bf-717f-4d90-9380-6997e825d2a0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveDown",
                    "type": "Button",
                    "id": "b473027b-fdbb-4d8e-a3a9-6984a9ae52a6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "347bab98-d1bc-47d2-9bfc-6c00817f5dfe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "d379c0d0-df34-4259-ac70-73ffbb3532ab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryClick",
                    "type": "Button",
                    "id": "77a43176-34aa-4aae-843f-e9216483fd28",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryClick",
                    "type": "Button",
                    "id": "4be70c87-d887-44c0-8349-6774c47080db",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseLook",
                    "type": "Value",
                    "id": "63afee3a-7041-48a6-b65d-0bf47538f73c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseScroll",
                    "type": "Value",
                    "id": "6e5b3e10-a469-48f9-81f5-fa7175e8814a",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "49c32431-0201-4918-834f-29350273da6a",
                    "path": "<Keyboard>/w",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23680760-b85d-4e08-8acb-55ab4e32fa5a",
                    "path": "<Keyboard>/s",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d16280a2-7d15-4feb-a49d-691ac236006d",
                    "path": "<Keyboard>/a",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2561da24-1873-4f0d-a20a-267df887e4db",
                    "path": "<Keyboard>/d",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b408d634-d599-491f-909d-4923299783db",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8bfbe5c4-1b05-4cab-8e8e-4aaa6a1bd01c",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "773cdc61-1c2d-4372-aa1b-b819e16fd023",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "MouseLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "02821b25-0a2f-493b-957f-06b555605966",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "",
                    "action": "MouseScroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6854882c-37b6-4298-afc4-76092112e420",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}